--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,12 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#florida {
+    background-color: #c07979;
+}
+
+#paris {
+    background-color: #292870;
+}
+
